@@ -10,6 +10,14 @@
 		<h2>
 			tekUI Changelog
 		</h2>
+		<blockquote>
+			<ul>
+				<li>
+					Corrected usage of directory iterators from <a href="manual.html#lfs:dir"><code>lfs.dir()</code></a>, now working with
+					LuaFilesystem 1.5 again
+				</li>
+			</ul>
+		</blockquote>
 		<h3>
 			0.8j:
 		</h3>
